--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,20 @@ services:
     build: .
     ports: ["8001:8001"]
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/metrics"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
     labels:
       - "co.elastic.logs/enabled=true"
       - "co.elastic.logs/module=tradepulse"
     depends_on:
-      - logstash
+      prometheus:
+        condition: service_started
+      logstash:
+        condition: service_started
   prometheus:
     image: prom/prometheus
     volumes:
