Fix kustomize namespace inclusion

--- a/deploy/kustomize/overlays/staging/kustomization.yaml
+++ b/deploy/kustomize/overlays/staging/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: tradepulse-staging
 
 resources:
-  - ../../namespaces/staging.yaml
+  - ../../namespaces/staging
   - ../../base
 
 images:
