--- a/deploy/kustomize/overlays/production/kustomization.yaml
+++ b/deploy/kustomize/overlays/production/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: tradepulse-production
 
 resources:
-  - ../../namespaces/production.yaml
+  - ../../namespaces/production
   - priorityclass.yaml
   - ../../base
 
