--- a/pytest.ini
+++ b/pytest.ini
@@ -1,14 +1,32 @@
 # SPDX-License-Identifier: MIT
 [pytest]
-addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
-testpaths = tests
-python_files = test_*.py
+addopts =
+    --maxfail=1
+    --strict-config
+    --strict-markers
+    --durations=25
+    --color=yes
+    -ra
+    -q
+    -W error::DeprecationWarning
 asyncio_default_fixture_loop_scope = function
+junit_family = xunit2
+junit_duration_report = total
+junit_suite_name = TradePulse
+log_cli = true
+log_cli_level = INFO
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     arm: cross-architecture and portability checks for indicators
     heavy_math: compute-intensive suites that gate pull requests
     flaky: quarantined scenarios executed in dedicated CI jobs with reruns
     nightly: full-fidelity regression suites executed in nightly pipelines
+    smoke: fast-running scenario coverage used in pre-merge checks
+python_files = test_*.py
+required_plugins =
+    pytest_cov
+    pytest_rerunfailures
+    pytest_xdist
+testpaths = tests
 filterwarnings =
     ignore::UserWarning
