--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,9 @@
 -r requirements.txt
 
 # Formatters & linters
+pre-commit==4.0.1
 black==25.9.0
+isort==5.13.2
 ruff==0.14.0
 slotscheck==0.19.1
 
@@ -10,15 +12,19 @@ mypy==1.18.2
 
 # Testing stack
 pytest==8.4.2
+pytest-asyncio==1.2.0
 pytest-benchmark==5.1.0
 pytest-cov==7.0.0
-pytest-asyncio==1.2.0
-hypothesis==6.140.3
 pytest-html==4.1.1
-pytest-xdist==3.8.0
 pytest-rerunfailures==16.1
-pytest-profiling==1.8.1; python_version < "3.13"
+pytest-xdist==3.8.0
+hypothesis==6.140.3
 mutmut==3.3.1
+coverage[toml]==7.6.10
+
+# CI tooling
+pytest-profiling==1.8.1; python_version < "3.13"
+pytest-subtests==0.12.1
 click>=8.3.0
 redis>=5.0.1
 
@@ -29,6 +35,7 @@ py-spy>=0.4.1
 # Security scanning
 bandit==1.8.6
 pip-audit==2.9.0
+safety==3.3.5
 pip>=25.2
 
 # Protocol buffers tooling
