Add defensive FastAPI and risk test coverage

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,13 @@ testpaths = tests
 python_files = test_*.py
 asyncio_default_fixture_loop_scope = function
 markers =
+    unit: marks fast deterministic tests that exercise isolated components
+    integration: marks tests that exercise multiple components together or the FastAPI surface
+    e2e: marks end-to-end workflow tests
+    property: marks property-based test suites
+    contract: marks API or schema contract verification suites
+    performance: marks benchmarks or latency/throughput checks
+    security: marks security-focused checks such as secret scanning or authz flows
     slow: marks tests as slow (deselect with '-m "not slow"')
     arm: cross-architecture and portability checks for indicators
     heavy_math: compute-intensive suites that gate pull requests
