ci: skip codecov upload when token absent

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
+    env:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     strategy:
       matrix:
         python-version: ['3.10', '3.11']
@@ -36,10 +38,16 @@ jobs:
           pytest --cov=./ --cov-report=xml --cov-report=term-missing --cov-fail-under=80
       
       - name: Upload coverage to Codecov
+        if: ${{ env.CODECOV_TOKEN != '' }}
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ env.CODECOV_TOKEN }}
           files: ./coverage.xml
           flags: py${{ matrix.python-version }}
           name: coverage-py${{ matrix.python-version }}
           fail_ci_if_error: true
+
+      - name: Skip Codecov upload (token unavailable)
+        if: ${{ env.CODECOV_TOKEN == '' }}
+        run: |
+          echo "CODECOV_TOKEN secret is not configured; skipping Codecov upload."
