--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    env:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     strategy:
       matrix:
         python-version: ['3.11', '3.12', '3.13']
@@ -189,12 +191,19 @@ jobs:
             coverage_html
           if-no-files-found: error
       - name: Upload coverage to Codecov
+        if: ${{ env.CODECOV_TOKEN != '' }}
         uses: codecov/codecov-action@v5
         with:
+          token: ${{ env.CODECOV_TOKEN }}
           files: ./coverage.xml
           flags: py${{ matrix.python-version }}
           name: py${{ matrix.python-version }}-coverage
           fail_ci_if_error: false
+
+      - name: Skip Codecov upload (token unavailable)
+        if: ${{ env.CODECOV_TOKEN == '' }}
+        run: |
+          echo "CODECOV_TOKEN secret is not configured; skipping Codecov upload."
 
   pytest-xdist:
     name: Pytest (xdist profiling)
