--- a/deploy/kustomize/overlays/production/kustomization.yaml
+++ b/deploy/kustomize/overlays/production/kustomization.yaml
@@ -8,9 +8,17 @@ resources:
   - priorityclass.yaml
   - ../../base
 
+configMapGenerator:
+  - name: tradepulse-db-endpoints
+    behavior: replace
+    literals:
+      - writerHost=__POSTGRES_WRITER_ENDPOINT__
+      - readerHost=__POSTGRES_READER_ENDPOINT__
+
 images:
   - name: ghcr.io/neuron7x/tradepulse
     newTag: stable
 
 patches:
   - path: patches/deployment-high-availability.yaml
+  - path: patches/postgres-secrets.yaml
