--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,21 +19,26 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-      
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
-      
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v3
+
+      - name: Create virtual environment
+        run: uv venv
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest pytest-cov
-      
+          if [ -f requirements.txt ]; then uv pip install -r requirements.txt; fi
+          uv pip install pytest pytest-cov
+
       - name: Run tests with coverage
         run: |
-          pytest --cov=./ --cov-report=xml --cov-report=term-missing --cov-fail-under=80
+          .venv/bin/python -m pytest --cov=./ --cov-report=xml --cov-report=term-missing --cov-fail-under=80
       
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
