--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core analytics stack
-numpy>=2.3.3
-scipy>=1.16.2
-pandas>=2.3.3
+numpy>=1.26.4,<3
+scipy>=1.11,<2
+pandas>=2.2,<3
 networkx>=3.5
 
 # Data validation
