--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "numpy>=1.26.4,<3",
     "scipy>=1.11,<2",
     "pandas>=2.2,<3",
-    "networkx>=3.5",
+    "networkx>=3.4,<4",
     "pydantic>=2.12.1,<3.0.0",
     "pydantic-settings>=2.11.0,<3.0.0",
     "pandera>=0.20.4,<0.27",
