--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.11', '3.12', '3.13']
+        python-version: ['3.11', '3.12']
     name: Test Coverage (Python ${{ matrix.python-version }})
     
     steps:
@@ -24,7 +24,6 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
-          allow-prereleases: ${{ matrix.python-version == '3.13' }}
       
       - name: Install dependencies
         run: |
