--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     strategy:
       matrix:
         python-version: ['3.10', '3.11']
@@ -35,7 +38,8 @@ jobs:
         run: |
           pytest --cov=./ --cov-report=xml --cov-report=term-missing --cov-fail-under=80
       
-      - name: Upload coverage to Codecov
+      - name: Upload coverage to Codecov (with token)
+        if: ${{ secrets.CODECOV_TOKEN != '' }}
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -43,3 +47,12 @@ jobs:
           flags: py${{ matrix.python-version }}
           name: coverage-py${{ matrix.python-version }}
           fail_ci_if_error: true
+      - name: Upload coverage to Codecov (OIDC)
+        if: ${{ secrets.CODECOV_TOKEN == '' }}
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage.xml
+          flags: py${{ matrix.python-version }}
+          name: coverage-py${{ matrix.python-version }}
+          fail_ci_if_error: true
+          use_oidc: true
