--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python
@@ -23,11 +26,18 @@ jobs:
       - name: Run tests with coverage
         run: |
           pytest --cov=./ --cov-report=xml
-      - name: Upload coverage to Codecov
+      - name: Upload coverage to Codecov (with token)
+        if: ${{ secrets.CODECOV_TOKEN != '' }}
         uses: codecov/codecov-action@v4
         with:
           file: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }} # Додайте цей секрет у налаштуваннях репозиторію
+      - name: Upload coverage to Codecov (OIDC)
+        if: ${{ secrets.CODECOV_TOKEN == '' }}
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
+          use_oidc: true
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
