Disable Codecov OIDC uploads on CI workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,6 @@ on:
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
     strategy:
       matrix:
         python-version: ['3.10', '3.11']
@@ -38,7 +35,7 @@ jobs:
         run: |
           pytest --cov=./ --cov-report=xml --cov-report=term-missing --cov-fail-under=80
       
-      - name: Upload coverage to Codecov (with token)
+      - name: Upload coverage to Codecov
         if: ${{ secrets.CODECOV_TOKEN != '' }}
         uses: codecov/codecov-action@v4
         with:
@@ -47,12 +44,3 @@ jobs:
           flags: py${{ matrix.python-version }}
           name: coverage-py${{ matrix.python-version }}
           fail_ci_if_error: true
-      - name: Upload coverage to Codecov (OIDC)
-        if: ${{ secrets.CODECOV_TOKEN == '' }}
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage.xml
-          flags: py${{ matrix.python-version }}
-          name: coverage-py${{ matrix.python-version }}
-          fail_ci_if_error: true
-          use_oidc: true
