Inject Kafka client configuration into live overlays

--- a/deploy/kustomize/overlays/production/kafka-secrets.yaml
+++ b/deploy/kustomize/overlays/production/kafka-secrets.yaml
@@ -54,5 +54,6 @@ stringData:
     -----BEGIN PRIVATE KEY-----
     REPLACE_ME_CLIENT_KEY
     -----END PRIVATE KEY-----
+  bootstrap.servers: REPLACE_ME_BOOTSTRAP_SERVERS
   sasl.username: tradepulse
   sasl.password: REPLACE_ME_CLIENT_PASSWORD
