--- a/deploy/kustomize/overlays/staging/kafka-secrets.yaml
+++ b/deploy/kustomize/overlays/staging/kafka-secrets.yaml
@@ -262,5 +262,6 @@ stringData:
     uxddPDoqpZxHBZd7QO7eGUni29hkYP9guKzKo1OS8KbOSBiCiLX+RVLupYBPhCqg
     phtt2y/v3gABLJOPoof6qR2v654u3IKm
     -----END PRIVATE KEY-----
+  bootstrap.servers: tradepulse-kafka:9093
   sasl.username: tradepulse
   sasl.password: tradepulse-secret
