--- a/deploy/kustomize/overlays/staging/patches/deployment-resources.yaml
+++ b/deploy/kustomize/overlays/staging/patches/deployment-resources.yaml
@@ -26,6 +26,35 @@ spec:
           env:
             - name: TRADEPULSE_ENVIRONMENT
               value: staging
+            - name: KAFKA_BOOTSTRAP_SERVERS
+              valueFrom:
+                secretKeyRef:
+                  name: tradepulse-kafka-client
+                  key: bootstrap.servers
+            - name: KAFKA_SECURITY_PROTOCOL
+              value: SASL_SSL
+            - name: KAFKA_SSL_CAFILE
+              value: /etc/tradepulse/kafka/ca.crt
+            - name: KAFKA_SSL_CERTFILE
+              value: /etc/tradepulse/kafka/client.crt
+            - name: KAFKA_SSL_KEYFILE
+              value: /etc/tradepulse/kafka/client.key
+            - name: KAFKA_SASL_MECHANISM
+              value: PLAIN
+            - name: KAFKA_SASL_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: tradepulse-kafka-client
+                  key: sasl.username
+            - name: KAFKA_SASL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: tradepulse-kafka-client
+                  key: sasl.password
+          volumeMounts:
+            - name: kafka-client-tls
+              mountPath: /etc/tradepulse/kafka
+              readOnly: true
       topologySpreadConstraints:
         - maxSkew: 1
           topologyKey: topology.kubernetes.io/zone
@@ -42,3 +71,7 @@ spec:
                   matchLabels:
                     app.kubernetes.io/name: tradepulse-api
                 topologyKey: topology.kubernetes.io/zone
+      volumes:
+        - name: kafka-client-tls
+          secret:
+            secretName: tradepulse-kafka-client
