Source Kafka protocol settings from secrets

--- a/deploy/kustomize/overlays/production/kafka-secrets.yaml
+++ b/deploy/kustomize/overlays/production/kafka-secrets.yaml
@@ -54,6 +54,8 @@ stringData:
     -----BEGIN PRIVATE KEY-----
     REPLACE_ME_CLIENT_KEY
     -----END PRIVATE KEY-----
+  security.protocol: SASL_SSL
+  sasl.mechanism: PLAIN
   bootstrap.servers: REPLACE_ME_BOOTSTRAP_SERVERS
   sasl.username: tradepulse
   sasl.password: REPLACE_ME_CLIENT_PASSWORD
