--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ exchange-calendars>=4.11.1
 PyYAML>=6.0.3
 hydra-core>=1.3.2
 omegaconf>=2.3.0
+mlflow>=2.17.0
 prometheus-client>=0.23.1
 opentelemetry-api>=1.37.0
 opentelemetry-sdk>=1.37.0
