--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,11 +6,62 @@ permissions:
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.11']
+    name: Lint & Type Check (Python ${{ matrix.python-version }})
+    steps:
+      - uses: actions/checkout@v5
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v3
+      - name: Cache uv
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: lint-uv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}
+          restore-keys: |
+            lint-uv-${{ runner.os }}-${{ matrix.python-version }}-
+      - name: Cache pre-commit environments
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: lint-pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
+      - name: Create virtual environment
+        run: uv venv
+      - name: Install Python dependencies
+        run: |
+          uv pip install -r requirements.txt
+          uv pip install -r requirements-dev.txt
+          uv pip install pre-commit detect-secrets
+      - name: Install shellcheck
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y shellcheck
+      - name: Run ruff
+        run: .venv/bin/ruff check .
+      - name: Run black
+        run: .venv/bin/black --check .
+      - name: Run mypy
+        run: .venv/bin/mypy
+      - name: Run slotscheck
+        run: .venv/bin/python -m slotscheck --module core --module backtest --module execution
+      - name: Run shfmt
+        run: .venv/bin/pre-commit run --hook-stage manual --all-files shfmt --show-diff-on-failure
+      - name: Run shellcheck
+        run: .venv/bin/pre-commit run --hook-stage manual --all-files shellcheck --show-diff-on-failure
+      - name: Run detect-secrets
+        run: .venv/bin/pre-commit run --hook-stage manual --all-files detect-secrets --show-diff-on-failure
   tests:
     runs-on: ubuntu-latest
     strategy:
