--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "test": "node tests/test.js"
+    "test": "node tests/test.js",
+    "lint": "eslint . --max-warnings=0"
+  },
+  "engines": {
+    "node": ">=18.18.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2"
   }
 }
