--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.11']
+        python-version: ['3.11', '3.12', '3.13']
     name: Lint & Type Check (Python ${{ matrix.python-version }})
     steps:
       - uses: actions/checkout@v5
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.11']
+        python-version: ['3.11', '3.12', '3.13']
     name: Tests (Python ${{ matrix.python-version }})
     steps:
       - uses: actions/checkout@v5
